--- a/index.ipynb
+++ b/index.ipynb
@@ -30,13 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "roll_dice = None"
+    "roll_dice = set([1,2,3,4,5,6])"
    ]
   },
   {
@@ -48,13 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "event = None"
+    "event = set([5,6])"
    ]
   },
   {
@@ -66,13 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prob_5_6 = None\n",
+    "prob_5_6 = 2/6\n",
     "prob_5_6  # 0.3333333333333333"
    ]
   },
@@ -95,11 +100,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.random.randint(1,7) # you will get a random value between 1 and 6. See how it changes when you rerun"
@@ -116,17 +130,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.random.seed(12345) # to make sure there is no randomness\n",
     "\n",
-    "dice_10 = np.random.randint(1,7,size= None)\n",
-    "dice_1k = np.random.randint(1,7,size= None)\n",
-    "dice_1m = np.random.randint(1,7,size=None)\n",
-    "dice_100m = np.random.randint(1,7,size=None)"
+    "dice_10 = np.random.randint(1,7,size= 10)\n",
+    "dice_1k = np.random.randint(1,7,size= 100)\n",
+    "dice_1m = np.random.randint(1,7,size=1000000)\n",
+    "dice_100m = np.random.randint(1,7,size=1000000000)"
    ]
   },
   {
@@ -691,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
